--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
   <script src="js/lib/knockout.js"></script>
   <script src="js/lib/underscore.js"></script>
   <script src="js/lib/jquery.js"></script>
+  <script src="data/catdata.js"></script>
   <script src="js/app.js"></script>
 </body>
 </html>
