Add some animation features

--- a/index.html
+++ b/index.html
@@ -12,9 +12,14 @@
       <div class="row">
         <div class="col-md-12">
           <h1> Cats of The Fretways </h1>
-          <p id="catstatus">
-            These are the current cats.
-          </p>
+          <section id="catinfo">
+            <h3 class="catheader">Cats</h3>
+            <div>
+              <p id="catstatus">
+                These are the current cats.  There are currently 5 of them, and they are all great.  Cinder is the oldest now, then Shivers, Catnip, Milkshake and Bella.  We are getting ready to take the cats on an adventure, as we drive from Mountain View, California to Pittsburgh, Pennsylvania with them.
+              </p>
+            </div>
+          </section>
           <table class="data" id="cats">
             <thead>
               <tr>
