add bouncy to the paragraph

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
   <title>Playing with jQuery</title>
   <link href="css/playquery.css" rel="stylesheet" type="text/css">
   <link href="css/bootstrap.min.css" rel="stylesheet">
+  <link href="css/jquery-ui.css" rel="stylesheet">
+  <link href="css/jquery-ui.structure.css" rel="stylesheet">
+  <link href="css/jquery-ui.theme.css" rel="stylesheet">
 </head>
 <body>
   <div id="main">
@@ -74,6 +77,7 @@
   <script src="js/lib/knockout.js"></script>
   <script src="js/lib/underscore.js"></script>
   <script src="js/lib/jquery.js"></script>
+  <script src="js/lib/jquery-ui.js"></script>
   <script src="data/catdata.js"></script>
   <script src="js/app.js"></script>
 </body>
